更新分子动力学模拟代码，调整迭代次数，修改数据类型为长双精度，增强力场计算精度，并添加输出到文件的功能

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "random": "cpp",
         "valarray": "cpp",
         "algorithm": "cpp",
-        "string": "cpp"
+        "string": "cpp",
+        "vector": "cpp"
     }
 }
